# Avtomatska-paralelizacija-v-OCamlu

./: .gitignore  README.md  beamer-predstavitev.tex  dokument-diplomska-naloga-stara.tex  dokument-diplomska-naloga.tex  literatura.bib  python_requirements.txt  requirements.txt
diploma/: beamer-predstavitev.tex  dokument-diplomska-naloga.tex  fmf-sl.bst  literatura.bib  predstavitev-dolga.tex  zagovor-diplomske-naloge.tex
playground/graph/: bfs.ml  bfs_examples.ml  dijkstra.ml  dijkstra_examples.ml  dune  dune-project  dune_file_contents.md  edge.ml  err_calculations.ml  example_edge.ml  example_graph.ml  example_node.ml  fib.ml  fib.mli  fib_examples.ml  fib_par.ml  floyd.ml  floyd_examples.ml  graph.ml  graph_examples.ml  node.ml  priority_queue.ml  priority_queue_examples.ml
playground/graph/computation_time_analysis/: bfs_par_combinations.csv  bfs_par_domains.csv  computation_time_analysis.ipynb  dijkstra_par_combinations.csv  dijkstra_par_domains.csv  fib_par.csv  fib_par_domains.csv  fib_par_n.csv  floyd_par_combinations.csv  floyd_par_domains.csv  tmp.csv
playground/graph/graph_files/: generate_undirected_graph.py  undirected_graph_large.txt  undirected_graph_small.txt  undirected_large_graph.txt  undirected_small_graph.txt
playground/graph/lib/: dune
playground/graph/test/: dune
